test_regress/t/t_class_extends_default.out
%Error-UNSUPPORTED: t/t_class_extends_default.v:14:25: Unsupported: 'extends' with 'default'
   14 | class Cls1 extends Base1(default);
      |                         ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
